<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2008 Google Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
       http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="app_name">CardTable</string>
    <string name="choice">Is this a player or a server?</string>
    <string name="deal_1">Draw 1 Card</string>
    <string name="deal_hand">Draw Full Hand</string>
    <string name="deck">Deck</string>
    <string name="server">Table Server</string>
    <string name="player">Local Player</string>
    <string name="table_title">Card Table</string>
    <string name="connect">Input IP Address and Port for Table</string>
    <string name="choose_port">Choose a port to listen for players</string>
    <string name="port_radio_1">Port 18080</string>
    <string name="port_radio_2">Port 18123</string>
    <string name="port_radio_3">Port 18777</string>
    <string name="port_cancel">Cancel</string>
    <string name="port_ok">Start Server</string>
    <string name="connect_text">Connect</string>
    <string name="server_quit">End Game</string>
    <string name="player_quit">Leave Game</string>
    <string name="ip_info_default">IP: Port:</string>
    <string name="hand_text"/>
    <string name="ip_text"/>
    <string name="port_text"/>
    <string name="discard">Discard</string>
    <string name="play">Play card</string>
    <string name="pass">Pass card</string>

</resources>
