<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".HandActivity">

    <RadioGroup
          android:id="@+id/port_radio_group"
          android:text="@string/choose_port"
          android:visibility="visible"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true">

        <RadioButton
                 android:id="@+id/port_radio_1"
                 android:text="@string/port_radio_1"
                 android:visibility="visible"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:checked="false"/>

        <RadioButton
                android:id="@+id/port_radio_2"
                android:text="@string/port_radio_2"
                android:visibility="visible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/port_radio_3"
                android:text="@string/port_radio_3"
                android:visibility="visible"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="false"/>

    </RadioGroup>

    <LinearLayout
            android:id="@+id/port_chooser_button_group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/port_chooser_ok_button"
                android:text="@string/port_ok"
                android:visibility="visible"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/port_chooser_cancel_button"
                android:text="@string/port_cancel"
                android:visibility="visible"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>
</LinearLayout>

