<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".TableActivity">

    <LinearLayout
        android:id="@+id/table_text_frame"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/table_title_text_view"
            android:text="@string/table_title"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/table_ip_text_view"
            android:text="@string/ip_info_default"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/table_button_frame"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/table_text_frame"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/table_deck_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:visibility="visible"
            android:text="@string/deck"/>

        <Button
            android:id="@+id/table_discard_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:visibility="visible"
            android:text="@string/discard"/>

    </LinearLayout>

    <Button
            android:id="@+id/table_quit_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:text="@string/server_quit"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />

</RelativeLayout>

