<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".HandActivity">

    <TextView
            android:id="@+id/hand_text_view"
            android:text="@string/hand_text"
            android:visibility="visible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            />

    <RelativeLayout
            android:id="@+id/hand_button_frame"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/hand_text_view"
            >

        <Button
                android:id="@+id/hand_deal_1_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:visibility="visible"
                android:text="@string/deal_1"/>

        <Button
                android:id="@+id/hand_deal_hand_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:visibility="visible"
                android:text="@string/deal_hand"
                android:layout_toRightOf="@id/hand_deal_1_button"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/hand_card_frame"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/hand_button_frame"
            />

    <Button
            android:id="@+id/hand_quit_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/player_quit"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />
</RelativeLayout>

