<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <TextView
          android:id="@+id/main_text_view"
          android:text="@string/choice"
          android:visibility="visible"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          />

    <LinearLayout
        android:id="@+id/main_button_frame"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/main_server_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="visible"
            android:text="@string/server"/>

        <Button
            android:id="@+id/main_client_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="visible"
            android:text="@string/player"
            />
    </LinearLayout>

</LinearLayout>

